--- a/package.json
+++ b/package.json
@@ -1,197 +1,254 @@
 {
-  "name": "no-name",
-  "license": "UNLICENSED",
-  "vaadin": {
-    "dependencies": {
-      "lit-element": "2.5.1",
-      "@polymer/polymer": "3.2.0",
-      "@vaadin/vaadin-icons": "20.0.0",
-      "@vaadin/vaadin-grid": "20.0.0",
-      "@vaadin/vaadin-split-layout": "20.0.0",
-      "@vaadin/vaadin-combo-box": "20.0.0",
-      "@vaadin/vaadin-core-shrinkwrap": "20.0.0",
-      "@vaadin/vaadin-upload": "20.0.0",
-      "@vaadin/vaadin-dialog": "20.0.0",
-      "@vaadin/vaadin-select": "20.0.0",
-      "@vaadin/vaadin-app-layout": "20.0.0",
-      "@vaadin/vaadin-item": "20.0.0",
-      "@vaadin/vaadin-notification": "20.0.0",
-      "@vaadin/vaadin-progress-bar": "20.0.0",
-      "@vaadin/vaadin-date-time-picker": "20.0.0",
-      "@vaadin/vaadin-ordered-layout": "20.0.0",
-      "@vaadin/vaadin-login": "20.0.0",
-      "@vaadin/vaadin-button": "20.0.0",
-      "@vaadin/vaadin-date-picker": "20.0.0",
-      "@vaadin/vaadin-text-field": "20.0.0",
-      "@vaadin/vaadin-menu-bar": "20.0.0",
-      "@vaadin/vaadin-custom-field": "20.0.0",
-      "@vaadin/vaadin-form-layout": "20.0.0",
-      "@vaadin/vaadin-accordion": "20.0.0",
-      "@polymer/iron-list": "3.1.0",
-      "@vaadin/vaadin-list-box": "20.0.0",
-      "@vaadin/vaadin-checkbox": "20.0.0",
-      "@vaadin/vaadin-details": "20.0.0",
-      "@polymer/iron-icon": "3.0.1",
-      "@vaadin/vaadin-time-picker": "20.0.0",
-      "@vaadin/vaadin-avatar": "20.0.0",
-      "@vaadin/vaadin-context-menu": "20.0.0",
-      "@vaadin/vaadin-radio-button": "20.0.0",
-      "@vaadin/vaadin-tabs": "20.0.0",
-      "@vaadin/vaadin-lumo-styles": "20.0.0",
-      "@vaadin/vaadin-material-styles": "20.0.0",
-      "@vaadin/router": "1.7.4",
-      "lit-html": "1.4.1",
-      "construct-style-sheets-polyfill": "2.4.16",
-      "@vaadin/vaadin-messages": "20.0.0",
-      "@polymer/iron-a11y-announcer": "3.0.2",
-      "@polymer/iron-a11y-keys-behavior": "3.0.1",
-      "@polymer/iron-fit-behavior": "3.0.2",
-      "@polymer/iron-flex-layout": "3.0.1",
-      "@polymer/iron-iconset-svg": "3.0.1",
-      "@polymer/iron-media-query": "3.0.1",
-      "@polymer/iron-meta": "3.0.1",
-      "@polymer/iron-overlay-behavior": "3.0.3",
-      "@polymer/iron-resizable-behavior": "3.0.1",
-      "@polymer/iron-scroll-target-behavior": "3.0.1",
-      "@webcomponents/shadycss": "1.9.6",
-      "@vaadin/vaadin-control-state-mixin": "20.0.0",
-      "@vaadin/vaadin-development-mode-detector": "2.0.4",
-      "@vaadin/vaadin-element-mixin": "20.0.0",
-      "@vaadin/vaadin-list-mixin": "20.0.0",
-      "@vaadin/vaadin-overlay": "20.0.0",
-      "@vaadin/vaadin-themable-mixin": "20.0.0",
-      "@vaadin/vaadin-usage-statistics": "2.1.0",
-      "@vaadin/vaadin-board": "20.0.0",
-      "@vaadin/vaadin-charts": "20.0.0",
-      "@vaadin/vaadin-confirm-dialog": "20.0.0",
-      "@vaadin/vaadin-cookie-consent": "20.0.0",
-      "@vaadin/vaadin-crud": "20.0.0",
-      "@vaadin/vaadin-grid-pro": "20.0.0",
-      "@vaadin/vaadin-rich-text-editor": "20.0.0"
-    },
-    "devDependencies": {
-      "compression-webpack-plugin": "4.0.1",
-      "webpack-cli": "3.3.11",
-      "webpack": "4.46.0",
-      "ts-loader": "8.0.12",
-      "chokidar": "^3.5.0",
-      "webpack-merge": "4.2.2",
-      "typescript": "4.2.3",
-      "webpack-dev-server": "3.11.0",
-      "css-loader": "4.2.1",
-      "file-loader": "6.2.0",
-      "fork-ts-checker-webpack-plugin": "6.2.1",
-      "extra-watch-webpack-plugin": "1.0.3",
-      "glob": "7.1.6",
-      "validator": "13.1.17",
-      "lit-css-loader": "0.0.4",
-      "loader-utils": "2.0.0",
-      "@types/validator": "13.1.0",
-      "workbox-core": "6.1.0",
-      "html-webpack-plugin": "4.5.1",
-      "workbox-precaching": "6.1.0",
-      "webpack-manifest-plugin": "3.0.0",
-      "extract-loader": "5.1.0",
-      "workbox-webpack-plugin": "6.1.0"
-    },
-    "hash": "d603ed5d197a67ce9ec06fe07dad022d2ad4be388b131217f687d52ce8500e49"
-  },
   "dependencies": {
-    "lit-element": "2.5.1",
-    "@polymer/polymer": "3.2.0",
-    "@vaadin/vaadin-icons": "20.0.0",
-    "@vaadin/vaadin-grid": "20.0.0",
-    "@vaadin/vaadin-split-layout": "20.0.0",
-    "@vaadin/vaadin-combo-box": "20.0.0",
-    "@vaadin/vaadin-core-shrinkwrap": "20.0.0",
-    "@vaadin/vaadin-upload": "20.0.0",
-    "@vaadin/vaadin-dialog": "20.0.0",
-    "@vaadin/vaadin-select": "20.0.0",
-    "@vaadin/vaadin-app-layout": "20.0.0",
-    "@vaadin/vaadin-item": "20.0.0",
-    "@vaadin/vaadin-notification": "20.0.0",
-    "@vaadin/vaadin-progress-bar": "20.0.0",
-    "@vaadin/vaadin-date-time-picker": "20.0.0",
-    "@vaadin/vaadin-ordered-layout": "20.0.0",
-    "@vaadin/vaadin-login": "20.0.0",
-    "@vaadin/vaadin-button": "20.0.0",
-    "@vaadin/vaadin-date-picker": "20.0.0",
-    "@vaadin/vaadin-text-field": "20.0.0",
-    "@vaadin/vaadin-menu-bar": "20.0.0",
-    "@vaadin/vaadin-custom-field": "20.0.0",
-    "@vaadin/vaadin-form-layout": "20.0.0",
-    "@vaadin/vaadin-accordion": "20.0.0",
-    "@polymer/iron-list": "3.1.0",
-    "@vaadin/vaadin-list-box": "20.0.0",
-    "@vaadin/vaadin-checkbox": "20.0.0",
-    "@vaadin/vaadin-details": "20.0.0",
     "@polymer/iron-icon": "3.0.1",
-    "@vaadin/vaadin-time-picker": "20.0.0",
-    "@vaadin/vaadin-avatar": "20.0.0",
-    "@vaadin/vaadin-context-menu": "20.0.0",
-    "@vaadin/vaadin-radio-button": "20.0.0",
-    "@vaadin/vaadin-tabs": "20.0.0",
-    "@vaadin/vaadin-lumo-styles": "20.0.0",
-    "@vaadin/vaadin-material-styles": "20.0.0",
-    "@vaadin/router": "1.7.4",
-    "lit-html": "1.4.1",
-    "@vaadin/flow-frontend": "./target/flow-frontend",
-    "@vaadin/form": "./target/flow-frontend/form",
-    "construct-style-sheets-polyfill": "2.4.16",
-    "@vaadin/vaadin-messages": "20.0.0",
-    "@polymer/iron-a11y-announcer": "3.0.2",
-    "@polymer/iron-a11y-keys-behavior": "3.0.1",
-    "@polymer/iron-fit-behavior": "3.0.2",
-    "@polymer/iron-flex-layout": "3.0.1",
     "@polymer/iron-iconset-svg": "3.0.1",
-    "@polymer/iron-media-query": "3.0.1",
+    "@polymer/iron-list": "3.1.0",
     "@polymer/iron-meta": "3.0.1",
-    "@polymer/iron-overlay-behavior": "3.0.3",
     "@polymer/iron-resizable-behavior": "3.0.1",
-    "@polymer/iron-scroll-target-behavior": "3.0.1",
-    "@webcomponents/shadycss": "1.9.6",
-    "@vaadin/vaadin-control-state-mixin": "20.0.0",
-    "@vaadin/vaadin-development-mode-detector": "2.0.4",
-    "@vaadin/vaadin-element-mixin": "20.0.0",
-    "@vaadin/vaadin-list-mixin": "20.0.0",
-    "@vaadin/vaadin-overlay": "20.0.0",
-    "@vaadin/vaadin-themable-mixin": "20.0.0",
-    "@vaadin/vaadin-usage-statistics": "2.1.0",
-    "@vaadin/vaadin-board": "20.0.0",
-    "@vaadin/vaadin-charts": "20.0.0",
-    "@vaadin/vaadin-confirm-dialog": "20.0.0",
-    "@vaadin/vaadin-cookie-consent": "20.0.0",
-    "@vaadin/vaadin-crud": "20.0.0",
-    "@vaadin/vaadin-grid-pro": "20.0.0",
-    "@vaadin/vaadin-rich-text-editor": "20.0.0"
+    "@polymer/polymer": "3.5.1",
+    "@vaadin/accordion": "23.3.8",
+    "@vaadin/app-layout": "23.3.8",
+    "@vaadin/avatar": "23.3.8",
+    "@vaadin/avatar-group": "23.3.8",
+    "@vaadin/bundles": "23.3.8",
+    "@vaadin/button": "23.3.8",
+    "@vaadin/checkbox": "23.3.8",
+    "@vaadin/checkbox-group": "23.3.8",
+    "@vaadin/combo-box": "23.3.8",
+    "@vaadin/common-frontend": "0.0.17",
+    "@vaadin/component-base": "23.3.8",
+    "@vaadin/confirm-dialog": "23.3.8",
+    "@vaadin/context-menu": "23.3.8",
+    "@vaadin/custom-field": "23.3.8",
+    "@vaadin/date-picker": "23.3.8",
+    "@vaadin/date-time-picker": "23.3.8",
+    "@vaadin/details": "23.3.8",
+    "@vaadin/dialog": "23.3.8",
+    "@vaadin/email-field": "23.3.8",
+    "@vaadin/field-base": "23.3.8",
+    "@vaadin/field-highlighter": "23.3.8",
+    "@vaadin/form": "./target/flow-frontend/form",
+    "@vaadin/form-layout": "23.3.8",
+    "@vaadin/grid": "23.3.8",
+    "@vaadin/horizontal-layout": "23.3.8",
+    "@vaadin/icon": "23.3.8",
+    "@vaadin/icons": "23.3.8",
+    "@vaadin/input-container": "23.3.8",
+    "@vaadin/integer-field": "23.3.8",
+    "@vaadin/item": "23.3.8",
+    "@vaadin/list-box": "23.3.8",
+    "@vaadin/lit-renderer": "23.3.8",
+    "@vaadin/login": "23.3.8",
+    "@vaadin/menu-bar": "23.3.8",
+    "@vaadin/message-input": "23.3.8",
+    "@vaadin/message-list": "23.3.8",
+    "@vaadin/multi-select-combo-box": "23.3.8",
+    "@vaadin/notification": "23.3.8",
+    "@vaadin/number-field": "23.3.8",
+    "@vaadin/password-field": "23.3.8",
+    "@vaadin/polymer-legacy-adapter": "23.3.8",
+    "@vaadin/progress-bar": "23.3.8",
+    "@vaadin/radio-group": "23.3.8",
+    "@vaadin/router": "1.7.4",
+    "@vaadin/scroller": "23.3.8",
+    "@vaadin/select": "23.3.8",
+    "@vaadin/split-layout": "23.3.8",
+    "@vaadin/tabs": "23.3.8",
+    "@vaadin/tabsheet": "23.3.8",
+    "@vaadin/text-area": "23.3.8",
+    "@vaadin/text-field": "23.3.8",
+    "@vaadin/time-picker": "23.3.8",
+    "@vaadin/tooltip": "23.3.8",
+    "@vaadin/upload": "23.3.8",
+    "@vaadin/vaadin-accordion": "23.3.8",
+    "@vaadin/vaadin-app-layout": "23.3.8",
+    "@vaadin/vaadin-avatar": "23.3.8",
+    "@vaadin/vaadin-button": "23.3.8",
+    "@vaadin/vaadin-checkbox": "23.3.8",
+    "@vaadin/vaadin-combo-box": "23.3.8",
+    "@vaadin/vaadin-confirm-dialog": "23.3.8",
+    "@vaadin/vaadin-context-menu": "23.3.8",
+    "@vaadin/vaadin-custom-field": "23.3.8",
+    "@vaadin/vaadin-date-picker": "23.3.8",
+    "@vaadin/vaadin-date-time-picker": "23.3.8",
+    "@vaadin/vaadin-details": "23.3.8",
+    "@vaadin/vaadin-development-mode-detector": "2.0.5",
+    "@vaadin/vaadin-dialog": "23.3.8",
+    "@vaadin/vaadin-form-layout": "23.3.8",
+    "@vaadin/vaadin-grid": "23.3.8",
+    "@vaadin/vaadin-icon": "23.3.8",
+    "@vaadin/vaadin-icons": "23.3.8",
+    "@vaadin/vaadin-item": "23.3.8",
+    "@vaadin/vaadin-list-box": "23.3.8",
+    "@vaadin/vaadin-list-mixin": "23.3.8",
+    "@vaadin/vaadin-login": "23.3.8",
+    "@vaadin/vaadin-lumo-styles": "23.3.8",
+    "@vaadin/vaadin-material-styles": "23.3.8",
+    "@vaadin/vaadin-menu-bar": "23.3.8",
+    "@vaadin/vaadin-messages": "23.3.8",
+    "@vaadin/vaadin-notification": "23.3.8",
+    "@vaadin/vaadin-ordered-layout": "23.3.8",
+    "@vaadin/vaadin-overlay": "23.3.8",
+    "@vaadin/vaadin-progress-bar": "23.3.8",
+    "@vaadin/vaadin-radio-button": "23.3.8",
+    "@vaadin/vaadin-select": "23.3.8",
+    "@vaadin/vaadin-split-layout": "23.3.8",
+    "@vaadin/vaadin-tabs": "23.3.8",
+    "@vaadin/vaadin-template-renderer": "23.3.8",
+    "@vaadin/vaadin-text-field": "23.3.8",
+    "@vaadin/vaadin-themable-mixin": "23.3.8",
+    "@vaadin/vaadin-time-picker": "23.3.8",
+    "@vaadin/vaadin-upload": "23.3.8",
+    "@vaadin/vaadin-usage-statistics": "2.1.2",
+    "@vaadin/vaadin-virtual-list": "23.3.8",
+    "@vaadin/vertical-layout": "23.3.8",
+    "@vaadin/virtual-list": "23.3.8",
+    "construct-style-sheets-polyfill": "3.1.0",
+    "date-fns": "2.29.3",
+    "lit": "2.6.1"
   },
   "devDependencies": {
-    "compression-webpack-plugin": "4.0.1",
-    "webpack-cli": "3.3.11",
-    "webpack": "4.46.0",
-    "ts-loader": "8.0.12",
-    "chokidar": "^3.5.0",
-    "webpack-merge": "4.2.2",
-    "typescript": "4.2.3",
-    "webpack-dev-server": "3.11.0",
-    "css-loader": "4.2.1",
-    "file-loader": "6.2.0",
-    "fork-ts-checker-webpack-plugin": "6.2.1",
-    "extra-watch-webpack-plugin": "1.0.3",
-    "glob": "7.1.6",
-    "validator": "13.1.17",
-    "lit-css-loader": "0.0.4",
-    "loader-utils": "2.0.0",
-    "@types/validator": "13.1.0",
-    "workbox-core": "6.1.0",
-    "html-webpack-plugin": "4.5.1",
-    "workbox-precaching": "6.1.0",
-    "webpack-manifest-plugin": "3.0.0",
-    "extract-loader": "5.1.0",
-    "workbox-webpack-plugin": "6.1.0",
-    "@vaadin/stats-plugin": "./target/plugins/stats-plugin",
-    "@vaadin/application-theme-plugin": "./target/plugins/application-theme-plugin",
-    "@vaadin/theme-loader": "./target/plugins/theme-loader",
-    "@vaadin/theme-live-reload-plugin": "./target/plugins/theme-live-reload-plugin"
+    "@rollup/plugin-replace": "3.1.0",
+    "@rollup/pluginutils": "4.1.0",
+    "async": "3.2.2",
+    "glob": "7.2.3",
+    "mkdirp": "1.0.4",
+    "rollup-plugin-brotli": "3.1.0",
+    "strip-css-comments": "5.0.0",
+    "transform-ast": "2.4.4",
+    "typescript": "4.9.3",
+    "vite": "3.2.5",
+    "vite-plugin-checker": "0.5.4",
+    "workbox-build": "6.5.4",
+    "workbox-core": "6.5.4",
+    "workbox-precaching": "6.5.4"
+  },
+  "license": "UNLICENSED",
+  "name": "no-name",
+  "vaadin": {
+    "dependencies": {
+      "@polymer/iron-icon": "3.0.1",
+      "@polymer/iron-iconset-svg": "3.0.1",
+      "@polymer/iron-list": "3.1.0",
+      "@polymer/iron-meta": "3.0.1",
+      "@polymer/iron-resizable-behavior": "3.0.1",
+      "@polymer/polymer": "3.5.1",
+      "@vaadin/accordion": "23.3.8",
+      "@vaadin/app-layout": "23.3.8",
+      "@vaadin/avatar": "23.3.8",
+      "@vaadin/avatar-group": "23.3.8",
+      "@vaadin/bundles": "23.3.8",
+      "@vaadin/button": "23.3.8",
+      "@vaadin/checkbox": "23.3.8",
+      "@vaadin/checkbox-group": "23.3.8",
+      "@vaadin/combo-box": "23.3.8",
+      "@vaadin/common-frontend": "0.0.17",
+      "@vaadin/component-base": "23.3.8",
+      "@vaadin/confirm-dialog": "23.3.8",
+      "@vaadin/context-menu": "23.3.8",
+      "@vaadin/custom-field": "23.3.8",
+      "@vaadin/date-picker": "23.3.8",
+      "@vaadin/date-time-picker": "23.3.8",
+      "@vaadin/details": "23.3.8",
+      "@vaadin/dialog": "23.3.8",
+      "@vaadin/email-field": "23.3.8",
+      "@vaadin/field-base": "23.3.8",
+      "@vaadin/field-highlighter": "23.3.8",
+      "@vaadin/form-layout": "23.3.8",
+      "@vaadin/grid": "23.3.8",
+      "@vaadin/horizontal-layout": "23.3.8",
+      "@vaadin/icon": "23.3.8",
+      "@vaadin/icons": "23.3.8",
+      "@vaadin/input-container": "23.3.8",
+      "@vaadin/integer-field": "23.3.8",
+      "@vaadin/item": "23.3.8",
+      "@vaadin/list-box": "23.3.8",
+      "@vaadin/lit-renderer": "23.3.8",
+      "@vaadin/login": "23.3.8",
+      "@vaadin/menu-bar": "23.3.8",
+      "@vaadin/message-input": "23.3.8",
+      "@vaadin/message-list": "23.3.8",
+      "@vaadin/multi-select-combo-box": "23.3.8",
+      "@vaadin/notification": "23.3.8",
+      "@vaadin/number-field": "23.3.8",
+      "@vaadin/password-field": "23.3.8",
+      "@vaadin/polymer-legacy-adapter": "23.3.8",
+      "@vaadin/progress-bar": "23.3.8",
+      "@vaadin/radio-group": "23.3.8",
+      "@vaadin/router": "1.7.4",
+      "@vaadin/scroller": "23.3.8",
+      "@vaadin/select": "23.3.8",
+      "@vaadin/split-layout": "23.3.8",
+      "@vaadin/tabs": "23.3.8",
+      "@vaadin/tabsheet": "23.3.8",
+      "@vaadin/text-area": "23.3.8",
+      "@vaadin/text-field": "23.3.8",
+      "@vaadin/time-picker": "23.3.8",
+      "@vaadin/tooltip": "23.3.8",
+      "@vaadin/upload": "23.3.8",
+      "@vaadin/vaadin-accordion": "23.3.8",
+      "@vaadin/vaadin-app-layout": "23.3.8",
+      "@vaadin/vaadin-avatar": "23.3.8",
+      "@vaadin/vaadin-button": "23.3.8",
+      "@vaadin/vaadin-checkbox": "23.3.8",
+      "@vaadin/vaadin-combo-box": "23.3.8",
+      "@vaadin/vaadin-confirm-dialog": "23.3.8",
+      "@vaadin/vaadin-context-menu": "23.3.8",
+      "@vaadin/vaadin-custom-field": "23.3.8",
+      "@vaadin/vaadin-date-picker": "23.3.8",
+      "@vaadin/vaadin-date-time-picker": "23.3.8",
+      "@vaadin/vaadin-details": "23.3.8",
+      "@vaadin/vaadin-development-mode-detector": "2.0.5",
+      "@vaadin/vaadin-dialog": "23.3.8",
+      "@vaadin/vaadin-form-layout": "23.3.8",
+      "@vaadin/vaadin-grid": "23.3.8",
+      "@vaadin/vaadin-icon": "23.3.8",
+      "@vaadin/vaadin-icons": "23.3.8",
+      "@vaadin/vaadin-item": "23.3.8",
+      "@vaadin/vaadin-list-box": "23.3.8",
+      "@vaadin/vaadin-list-mixin": "23.3.8",
+      "@vaadin/vaadin-login": "23.3.8",
+      "@vaadin/vaadin-lumo-styles": "23.3.8",
+      "@vaadin/vaadin-material-styles": "23.3.8",
+      "@vaadin/vaadin-menu-bar": "23.3.8",
+      "@vaadin/vaadin-messages": "23.3.8",
+      "@vaadin/vaadin-notification": "23.3.8",
+      "@vaadin/vaadin-ordered-layout": "23.3.8",
+      "@vaadin/vaadin-overlay": "23.3.8",
+      "@vaadin/vaadin-progress-bar": "23.3.8",
+      "@vaadin/vaadin-radio-button": "23.3.8",
+      "@vaadin/vaadin-select": "23.3.8",
+      "@vaadin/vaadin-split-layout": "23.3.8",
+      "@vaadin/vaadin-tabs": "23.3.8",
+      "@vaadin/vaadin-template-renderer": "23.3.8",
+      "@vaadin/vaadin-text-field": "23.3.8",
+      "@vaadin/vaadin-themable-mixin": "23.3.8",
+      "@vaadin/vaadin-time-picker": "23.3.8",
+      "@vaadin/vaadin-upload": "23.3.8",
+      "@vaadin/vaadin-usage-statistics": "2.1.2",
+      "@vaadin/vaadin-virtual-list": "23.3.8",
+      "@vaadin/vertical-layout": "23.3.8",
+      "@vaadin/virtual-list": "23.3.8",
+      "construct-style-sheets-polyfill": "3.1.0",
+      "date-fns": "2.29.3",
+      "lit": "2.6.1"
+    },
+    "devDependencies": {
+      "@rollup/plugin-replace": "3.1.0",
+      "@rollup/pluginutils": "4.1.0",
+      "async": "3.2.2",
+      "glob": "7.2.3",
+      "mkdirp": "1.0.4",
+      "rollup-plugin-brotli": "3.1.0",
+      "strip-css-comments": "5.0.0",
+      "transform-ast": "2.4.4",
+      "typescript": "4.9.3",
+      "vite": "3.2.5",
+      "vite-plugin-checker": "0.5.4",
+      "workbox-build": "6.5.4",
+      "workbox-core": "6.5.4",
+      "workbox-precaching": "6.5.4"
+    },
+    "hash": "0a3f714512eb4d12eaec2921e5c9a61c4a09bea7bed5c019542290ff50475466"
   }
 }
